# AISO-workshop-ML67

./: README.md  pyproject.toml  workshop-improvement-todos.md
my_agent/: agent.py
my_agent/agents/: __init__.py  document_agent.py  research_agent.py
my_agent/tools/: __init__.py  calculator.py  chess_engine.py  fetch_webpage.py  read_doi.py  read_pdf.py  web_search.py
utils/: server.py
